--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 Flask==3.0.1
+Flask-WTF==1.1.1
 gunicorn==23.0.0
-
 requests==2.32.0
 structlog==25.1.0
-
 google-auth==2.3.2
+sshtunnel==0.4.0
+mysql-connector-python==8.0.33
+bcrypt==4.0.1
